# torch_util

./: CMakeLists.txt  LICENSE  README.md
include/: torch_util.h
src/: torch_util.cpp
